--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.12.68",
+    "@react-navigation/bottom-tabs": "^5.0.5",
+    "@react-navigation/native": "^5.0.8",
+    "@react-navigation/stack": "^5.0.5",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
@@ -16,7 +19,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.1",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-screens": "^2.9.0",
     "react-native-web": "~0.13.12",
+    "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
